jilles      2006/10/21 21:24:10 UTC	(20061021-6819)
  Log:
  Do /stats f a little differently to avoid disclosing
  IPs over IRC and using connection_list outside connection.c.
  This uses a callback similar to the one for /stats B.
  

  Changes:	Modified:
  +46 -0	trunk/libatheme/connection.c (File Modified) 
  +1 -0		trunk/libatheme/connection.h (File Modified) 
  +7 -7		trunk/src/ptasks.c (File Modified) 


nenolod     2006/10/21 20:43:28 UTC	(20061021-6817)
  Log:
  - actually store the connection name in the memory we have alloted for it
  - list connections on /stats [fF]
  

  Changes:	Modified:
  +5 -2		trunk/libatheme/connection.c (File Modified) 
  +14 -0	trunk/src/ptasks.c (File Modified) 


jilles      2006/10/21 20:37:21 UTC	(20061021-6815)
  Log:
  nickserv/chanserv status:
  - don't crash if called from non-IRC
  - show if the user is recognized via access list (but
    not logged in to that nick)
  

  Changes:	Modified:
  +11 -2	trunk/modules/chanserv/status.c (File Modified) 
  +11 -2	trunk/modules/nickserv/status.c (File Modified) 


jilles      2006/10/21 20:18:14 UTC	(20061021-6813)
  Log:
  nickserv/chanserv status: give more information if the user is not logged in
  (they can still match hostmask channel access or be opered)
  

  Changes:	Modified:
  +14 -15	trunk/modules/chanserv/status.c (File Modified) 
  +12 -13	trunk/modules/nickserv/status.c (File Modified) 


jilles      2006/10/21 20:08:09 UTC	(20061021-6811)
  Log:
  ns_enforce: no need to declare userlist another time here
  

  Changes:	Modified:
  +1 -1		trunk/contrib/ns_enforce.c (File Modified) 


jilles      2006/10/21 19:47:41 UTC	(20061021-6809)
  Log:
  Give the translation trees a higher resolution.
  

  Changes:	Modified:
  +2 -0		trunk/include/common.h (File Modified) 
  +2 -2		trunk/src/culture.c (File Modified) 


jilles      2006/10/21 19:43:43 UTC	(20061021-6807)
  Log:
  - Move translation_init() up so it's done when it's needed.