@@ -1,3 +1,11 @@
+w00t        2006/10/21 22:30:12 UTC	(20061021-6821)
+  Log:
+  Simplified FJOIN processing and commented it.
+
+  Changes:	Modified:
+  +36 -7	trunk/protocol/inspircd11.c (File Modified) 
+
+
 jilles      2006/10/21 21:24:10 UTC	(20061021-6819)
   Log:
   Do /stats f a little differently to avoid disclosing
